--- a/public/css/pages/programming_dashboard.css
+++ b/public/css/pages/programming_dashboard.css
@@ -60,7 +60,7 @@ body {
     /* background: linear-gradient(to right, #527b96, #12354dc2); */
     background-color: #39a900;
     border-radius: 10px 10px 0px 0px;
-    
+
 }
 
 .titulo {
@@ -169,7 +169,7 @@ select {
     background-color: #F8FAFC;
     border-radius: 10px;
     padding: 10px;
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
 }
 
 .filas {
@@ -194,8 +194,10 @@ select {
     width: 100%;
     gap: 10px;
 }
+
 .dia {
-    --hover: rgb(25, 160, 25);      /* color del efecto al hacer hover */
+    --hover: rgb(25, 160, 25);
+    /* color del efecto al hacer hover */
 
     border-radius: 10px;
     display: flex;
@@ -215,7 +217,8 @@ select {
 .dia input[type="checkbox"]:checked {
     color: white;
     border-color: var(--hover);
-    box-shadow: inset 0 -3.25em 0 0 var(--hover); /* efecto del QUINTO botón */
+    box-shadow: inset 0 -3.25em 0 0 var(--hover);
+    /* efecto del QUINTO botón */
 }
 
 
@@ -632,7 +635,6 @@ table tr:last-child td {
 }
 
 /* AMBIENTES */
-
 #classRoom+.select2-container--default .select2-selection--single {
     background-color: #F8FAFC;
     border: 2px solid #E5EAF0;
@@ -654,6 +656,33 @@ table tr:last-child td {
 
 
 #classRoom+.select2-container--default.select2-container--focus .select2-selection--single {
+    outline: none;
+    box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.1);
+}
+
+/* AMBIENTES */
+
+#ficha_programa+.select2-container--default .select2-selection--single {
+    background-color: #F8FAFC;
+    border: 2px solid #E5EAF0;
+    border-radius: 8px;
+    height: 42px;
+    padding: 10px 15px;
+    font-size: 15px;
+    color: #a1a1a1;
+    cursor: pointer;
+    box-sizing: border-box;
+    display: flex;
+    align-items: center;
+    transition: border-color 0.2s, box-shadow 0.2s;
+}
+
+#ficha_programa+.select2-container--default .select2-selection__arrow {
+    display: none !important;
+}
+
+
+#ficha_programa+.select2-container--default.select2-container--focus .select2-selection--single {
     outline: none;
     box-shadow: 0 0 0 3px rgba(40, 167, 69, 0.1);
 }
